--- a/app/src/main/res/layout/bracket.xml
+++ b/app/src/main/res/layout/bracket.xml
@@ -10,16 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
-                      xmlns:android="http://schemas.android.com/apk/res/android"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:fitsSystemWindows="true"
-                      android:orientation="vertical"
-                      android:paddingBottom="@dimen/activity_horizontal_margin"
-                      android:paddingLeft="@dimen/activity_vertical_margin"
-                      android:paddingRight="@dimen/activity_vertical_margin"
-                      android:paddingTop="@dimen/activity_horizontal_margin">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_horizontal_margin">
 
             <LinearLayout
                 android:layout_width="match_parent"
