--- a/app/src/main/res/layout/event_slide.xml
+++ b/app/src/main/res/layout/event_slide.xml
@@ -3,11 +3,8 @@
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_weight="10"
               android:background="@color/primary"
-              android:orientation="vertical"
-              android:paddingLeft="16dp"
-              android:paddingRight="16dp">
+              android:orientation="vertical">
 
     <TextView
         android:layout_width="fill_parent"
