--- a/app/src/main/res/layout/first_slide.xml
+++ b/app/src/main/res/layout/first_slide.xml
@@ -21,7 +21,7 @@
         android:textSize="28sp"/>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/check"
         android:scaleType="fitCenter"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
