--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,11 @@
         android:title="@string/refresh_icon"
         app:showAsAction="ifRoom"/>
     <item
+        android:id="@+id/actionDirections"
+        android:orderInCategory="100"
+        android:title="@string/action_directions"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
