--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -13,6 +13,13 @@
             android:key="theme"
             android:summary="Choose between different color schemes"
             android:title="App Theme"/>
+        <ListPreference
+            android:defaultValue="linear"
+            android:entries="@array/matchSort"
+            android:entryValues="@array/matchSortValues"
+            android:key="matchSort"
+            android:title="Match Sorting"
+            android:summary="Choose match order sorting"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Advanced Features">
