Basic customizable match ordering resolves #67

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -14,7 +14,7 @@
             android:summary="Choose between different color schemes"
             android:title="App Theme"/>
         <ListPreference
-            android:defaultValue="linear"
+            android:defaultValue="seriesGrouping"
             android:entries="@array/matchSort"
             android:entryValues="@array/matchSortValues"
             android:key="matchSort"
