--- a/app/src/main/res/layout/award.xml
+++ b/app/src/main/res/layout/award.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:paddingEnd="16dp"
         android:paddingRight="16dp"
-        android:text="@string/sample_team"
+        android:text="@string/sampleTeam"
         android:textColor="?textOnBackground"
         android:textSize="16sp"
         android:textStyle="bold"/>
