--- a/app/src/main/res/layout/first_slide.xml
+++ b/app/src/main/res/layout/first_slide.xml
@@ -16,7 +16,7 @@
         android:layout_weight="2"
         android:fontFamily="sans-serif-thin"
         android:gravity="center|bottom"
-        android:text="@string/welcome_slide_text"
+        android:text="@string/welcomeSlideText"
         android:textColor="@color/icons"
         android:textSize="28sp"/>
 
@@ -26,7 +26,7 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="7"
-        android:contentDescription="@string/icon_description"
+        android:contentDescription="@string/iconDescription"
         android:src="@drawable/ic_launcher_foreground"/>
 
     <TextView
@@ -35,7 +35,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center|top"
-        android:text="@string/app_description"
+        android:text="@string/appDescription"
         android:textColor="@color/icons"
         android:textSize="16sp"/>
 
