--- a/app/src/main/res/layout/fragment_fastscroll.xml
+++ b/app/src/main/res/layout/fragment_fastscroll.xml
@@ -31,7 +31,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:padding="8dp"
-        android:text="@string/no_data"
+        android:text="@string/noData"
         android:textColor="?textOnBackground"
         android:textSize="24sp"/>
 
