--- a/app/src/main/res/layout/match.xml
+++ b/app/src/main/res/layout/match.xml
@@ -55,7 +55,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:gravity="center"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"
@@ -66,7 +66,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:gravity="center"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"
@@ -77,7 +77,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:gravity="center"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"
@@ -98,7 +98,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:gravity="center"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"
@@ -109,7 +109,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:gravity="center"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"
@@ -120,7 +120,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:gravity="center"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"
@@ -205,7 +205,7 @@
                         android:layout_weight="1"
                         android:gravity="right"
                         android:paddingRight="12dp"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"/>
 
@@ -226,7 +226,7 @@
                         android:layout_weight="1"
                         android:gravity="right"
                         android:paddingRight="12dp"
-                        android:text="@string/sample_team"
+                        android:text="@string/sampleTeam"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"/>
 
