--- a/app/src/main/res/layout/team_number_slide.xml
+++ b/app/src/main/res/layout/team_number_slide.xml
@@ -17,7 +17,7 @@
         android:layout_weight="3"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
-        android:text="@string/team_number_prompt"
+        android:text="@string/teamNumberPrompt"
         android:textColor="@color/icons"
         android:textSize="28sp"/>
 
@@ -43,7 +43,7 @@
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/year_array"/>
+        android:entries="@array/yearArray"/>
 
     <Space
         android:id="@+id/blank2"
