--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,16 +6,16 @@
         android:id="@+id/refresh_all"
         android:icon="@drawable/refresh_icon"
         android:orderInCategory="100"
-        android:title="@string/refresh_icon"
+        android:title="@string/refreshIcon"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/actionDirections"
         android:orderInCategory="100"
-        android:title="@string/action_directions"
+        android:title="@string/actionDirections"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/actionSettings"
         app:showAsAction="never"/>
 </menu>
